salesforce_sfdx/main/default/objects/Account/fields/ABCBS_ID__c.field-meta.xml
<CustomField>
    <fullName>ABCBS_ID__c</fullName>
    <label>ABCBS ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>