salesforce_sfdx/main/default/objects/Account/fields/Advance_Notification__c.field-meta.xml
<CustomField>
    <fullName>Advance_Notification__c</fullName>
    <label>Advance Notification</label>
    <type>Date</type>
</CustomField>