salesforce_sfdx/main/default/objects/Account/fields/Affiliation_Id__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Id__c</fullName>
    <label>Affiliation Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>