salesforce_sfdx/main/default/objects/Account/fields/Age_Policy__c.field-meta.xml
<CustomField>
    <fullName>Age_Policy__c</fullName>
    <label>Age Policy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>