salesforce_sfdx/main/default/objects/Account/fields/Agency_ID__c.field-meta.xml
<CustomField>
    <fullName>Agency_ID__c</fullName>
    <description>Used for Storing the agency Id of 12 digit.</description>
    <label>Agency ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>