salesforce_sfdx/main/default/objects/Account/fields/Billed_Thru_Date__c.field-meta.xml
<CustomField>
    <fullName>Billed_Thru_Date__c</fullName>
    <label>Billed Thru Date</label>
    <type>Date</type>
</CustomField>