salesforce_sfdx/main/default/objects/Account/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <label>Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>