salesforce_sfdx/main/default/objects/Account/fields/COB_Rule__c.field-meta.xml
<CustomField>
    <fullName>COB_Rule__c</fullName>
    <label>COB Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>