salesforce_sfdx/main/default/objects/Account/fields/Cobra_Offered__c.field-meta.xml
<CustomField>
    <fullName>Cobra_Offered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cobra Offered</label>
    <type>Checkbox</type>
</CustomField>