salesforce_sfdx/main/default/objects/Account/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>