salesforce_sfdx/main/default/objects/Account/fields/DOD__c.field-meta.xml
<CustomField>
    <fullName>DOD__c</fullName>
    <label>DOD</label>
    <type>Date</type>
</CustomField>