salesforce_sfdx/main/default/objects/Account/fields/EBill__c.field-meta.xml
<CustomField>
    <fullName>EBill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EBill</label>
    <type>Checkbox</type>
</CustomField>