salesforce_sfdx/main/default/objects/Account/fields/Employees_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Employees_Eligible__c</fullName>
    <label>Employees Eligible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>