salesforce_sfdx/main/default/objects/Account/fields/Employees_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Employees_Enrolled__c</fullName>
    <label>Employees Enrolled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>