salesforce_sfdx/main/default/objects/Account/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMPLOYEE STATUS CODE</fullName>
            </value>
            <value>
                <fullName>ACTIVE EMPLOYEE STATUS</fullName>
            </value>
            <value>
                <fullName>ACTIVE</fullName>
            </value>
            <value>
                <fullName>MEDI-PAK HMO AGED/ESRD</fullName>
            </value>
            <value>
                <fullName>MEDI-PAK HMO AGED/HOSPICE</fullName>
            </value>
            <value>
                <fullName>MEDI-PAK HMO AGED/INSTITITIONALIZED</fullName>
            </value>
            <value>
                <fullName>AGED MEDI-PAK APPLICANT WITH MEDICAID/WELFARE BENEFITS. (NON-INSTITUTE)</fullName>
            </value>
            <value>
                <fullName>ACTIVE MILITARY - OVERSEAS</fullName>
            </value>
            <value>
                <fullName>ACTIVE MILITARY - USA</fullName>
            </value>
            <value>
                <fullName>MEDI-PAK HMO AGED/WORKING AGED</fullName>
            </value>
            <value>
                <fullName>COBRA</fullName>
            </value>
            <value>
                <fullName>MEDI-PAK HMO DISABLED/ESRD</fullName>
            </value>
            <value>
                <fullName>MEDI-PAK HMO DISABLED/HOSPICE</fullName>
            </value>
            <value>
                <fullName>MEDI-PAK HMO DISABLED/INSTITUTIONALIZED</fullName>
            </value>
            <value>
                <fullName>DISABLED</fullName>
            </value>
            <value>
                <fullName>DISABLED MEDI-PAK APPLICANT WITH MEDICAID/WELFARE BENEFITS. (NON-INSTIT)</fullName>
            </value>
            <value>
                <fullName>DISABLED RETIREE **FOR ASE ONLY**</fullName>
            </value>
            <value>
                <fullName>FULL TIME ACTIVE EMPLOYEES</fullName>
            </value>
            <value>
                <fullName>FULL-TIME</fullName>
            </value>
            <value>
                <fullName>LEAVE OF ABSENCE</fullName>
            </value>
            <value>
                <fullName>MEDI-PAK HMO AGED MEMBER</fullName>
            </value>
            <value>
                <fullName>MEDI-PAK HMO DISABLED MEMBER</fullName>
            </value>
            <value>
                <fullName>PART-TIME ACTIVE EMPLOYEE</fullName>
            </value>
            <value>
                <fullName>PART-TIME</fullName>
            </value>
            <value>
                <fullName>RETIREE</fullName>
            </value>
            <value>
                <fullName>RETIRED</fullName>
            </value>
            <value>
                <fullName>SURVING SPOUSE</fullName>
            </value>
            <value>
                <fullName>TERMINATED</fullName>
            </value>
            <value>
                <fullName>MEMBER'S SERVICE OUT-OF-POCKET MAXIMUM HAS BEEN MET</fullName>
            </value>
            <value>
                <fullName>RESERVED FOR MEDICARE ADVANTAGE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>