salesforce_sfdx/main/default/objects/Account/fields/Group_Administration__c.field-meta.xml
<CustomField>
    <fullName>Group_Administration__c</fullName>
    <label>Group Administration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>