salesforce_sfdx/main/default/objects/Account/fields/ID_Card_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>ID_Card_Order_Date__c</fullName>
    <description>ID Card order date</description>
    <label>ID Card Order Date</label>
    <type>Date</type>
</CustomField>