salesforce_sfdx/main/default/objects/Account/fields/Last_4_Digit_Of_SSN__c.field-meta.xml
<CustomField>
    <fullName>Last_4_Digit_Of_SSN__c</fullName>
    <formula>VALUE(RIGHT(SSN__c,4))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last 4 Digit Of SSN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>