salesforce_sfdx/main/default/objects/Account/fields/Last_Refresh_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Refresh_Date__c</fullName>
    <label>Last Refresh Date</label>
    <type>DateTime</type>
</CustomField>