salesforce_sfdx/main/default/objects/Account/fields/Mailing_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Country__c</fullName>
    <label>Mailing Address Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>