salesforce_sfdx/main/default/objects/Account/fields/Marketing_Rep__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Rep__c</fullName>
    <label>Marketing Rep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>