salesforce_sfdx/main/default/objects/Account/fields/Medicare_HIC_MBI__c.field-meta.xml
<CustomField>
    <fullName>Medicare_HIC_MBI__c</fullName>
    <label>Medicare HIC/MBI #</label>
    <length>40</length>
    <type>Text</type>
</CustomField>