salesforce_sfdx/main/default/objects/Account/fields/Member_Exchange_ID__c.field-meta.xml
<CustomField>
    <fullName>Member_Exchange_ID__c</fullName>
    <label>Member Exchange ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>