salesforce_sfdx/main/default/objects/Account/fields/MyBluePrint__c.field-meta.xml
<CustomField>
    <fullName>MyBluePrint__c</fullName>
    <label>MyBluePrint</label>
    <type>Url</type>
</CustomField>