salesforce_sfdx/main/default/objects/Account/fields/MyBlueprint_Admin_URL__c.field-meta.xml
<CustomField>
    <fullName>MyBlueprint_Admin_URL__c</fullName>
    <label>MyBlueprint Admin URL</label>
    <type>Url</type>
</CustomField>