salesforce_sfdx/main/default/objects/Account/fields/MyBlueprint_Pre_Registration__c.field-meta.xml
<CustomField>
    <fullName>MyBlueprint_Pre_Registration__c</fullName>
    <label>MyBlueprint Pre Registration</label>
    <type>Url</type>
</CustomField>