salesforce_sfdx/main/default/objects/Account/fields/MyBluePrint_Status__c.field-meta.xml
<CustomField>
    <fullName>MyBluePrint_Status__c</fullName>
    <label>MyBluePrint Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Not Registered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>