salesforce_sfdx/main/default/objects/Account/fields/Name_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Name_Prefix__c</fullName>
    <label>Name Prefix</label>
    <length>40</length>
    <type>Text</type>
</CustomField>