salesforce_sfdx/main/default/objects/Account/fields/Name_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Name_Suffix__c</fullName>
    <label>Name Suffix</label>
    <length>40</length>
    <type>Text</type>
</CustomField>