salesforce_sfdx/main/default/objects/Account/fields/Paid_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_To_Date__c</fullName>
    <label>Paid To Date</label>
    <type>Date</type>
</CustomField>