salesforce_sfdx/main/default/objects/Account/fields/Physical_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Physical_Address_Country__c</fullName>
    <label>Physical Address Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>