salesforce_sfdx/main/default/objects/Account/fields/Preferred_Spoken_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Spoken_Language__c</fullName>
    <inlineHelpText>Select the Preferred Spoken Language.</inlineHelpText>
    <label>Preferred Spoken Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HealthCloudGA__Languages</valueSetName>
    </valueSet>
</CustomField>