salesforce_sfdx/main/default/objects/Account/fields/Premium_Grace_Period__c.field-meta.xml
<CustomField>
    <fullName>Premium_Grace_Period__c</fullName>
    <label>Premium Grace Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>