salesforce_sfdx/main/default/objects/Account/fields/Primary_Care_Manager_Department__c.field-meta.xml
<CustomField>
    <fullName>Primary_Care_Manager_Department__c</fullName>
    <label>Primary Care Manager Department</label>
    <length>100</length>
    <type>Text</type>
</CustomField>