salesforce_sfdx/main/default/objects/Account/fields/Primary_Care_Manager_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Care_Manager_Phone__c</fullName>
    <label>Primary Care Manager Phone</label>
    <type>Phone</type>
</CustomField>