salesforce_sfdx/main/default/objects/Account/fields/Primary_Care_Physician_NPI__c.field-meta.xml
<CustomField>
    <fullName>Primary_Care_Physician_NPI__c</fullName>
    <label>Primary Care Physician NPI</label>
    <length>100</length>
    <type>Text</type>
</CustomField>