salesforce_sfdx/main/default/objects/Account/fields/Probation_Period__c.field-meta.xml
<CustomField>
    <fullName>Probation_Period__c</fullName>
    <label>Probation Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>