salesforce_sfdx/main/default/objects/Account/fields/Region_Provider_Network__c.field-meta.xml
<CustomField>
    <fullName>Region_Provider_Network__c</fullName>
    <label>Region / Provider Network</label>
    <length>255</length>
    <type>Text</type>
</CustomField>