salesforce_sfdx/main/default/objects/Account/fields/Risk_Score_Last_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Risk_Score_Last_Calculated__c</fullName>
    <label>Risk Score Last Calculated</label>
    <type>Date</type>
</CustomField>