salesforce_sfdx/main/default/objects/Account/fields/Secondary_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Email_Address__c</fullName>
    <label>Secondary Email Address</label>
    <type>Email</type>
</CustomField>