salesforce_sfdx/main/default/objects/Account/fields/Secondary_Spoken_Language__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Spoken_Language__c</fullName>
    <inlineHelpText>Select the Secondary Spoken Language</inlineHelpText>
    <label>Secondary Spoken Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HealthCloudGA__Languages</valueSetName>
    </valueSet>
</CustomField>