salesforce_sfdx/main/default/objects/Account/fields/Self_Administered__c.field-meta.xml
<CustomField>
    <fullName>Self_Administered__c</fullName>
    <label>Self Administered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>