salesforce_sfdx/main/default/objects/Account/fields/Social_Worker_Name__c.field-meta.xml
<CustomField>
    <fullName>Social_Worker_Name__c</fullName>
    <label>Social Worker Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>