salesforce_sfdx/main/default/objects/Account/fields/Social_Worker_Phone__c.field-meta.xml
<CustomField>
    <fullName>Social_Worker_Phone__c</fullName>
    <label>Social Worker Phone</label>
    <type>Phone</type>
</CustomField>