salesforce_sfdx/main/default/objects/Account/fields/Spoken_Language__c.field-meta.xml
<CustomField>
    <fullName>Spoken_Language__c</fullName>
    <label>Spoken Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>