salesforce_sfdx/main/default/objects/Account/fields/Term_Grace_Period__c.field-meta.xml
<CustomField>
    <fullName>Term_Grace_Period__c</fullName>
    <label>Term Grace Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>