salesforce_sfdx/main/default/objects/Account/fields/Term_Reason__c.field-meta.xml
<CustomField>
    <fullName>Term_Reason__c</fullName>
    <label>Term Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>