salesforce_sfdx/main/default/objects/Account/recordTypes/AccountRecord.recordType-meta.xml
<RecordType>
    <fullName>AccountRecord</fullName>
    <active>true</active>
    <description>The default account record.</description>
    <label>AccountRecord</label>
</RecordType>