salesforce_sfdx/main/default/objects/Account/recordTypes/HealthCloudGA__IndustriesHousehold.recordType-meta.xml
<RecordType>
    <fullName>HealthCloudGA__IndustriesHousehold</fullName>
    <active>true</active>
    <description>Represents a Household</description>
    <label>Household</label>
</RecordType>