salesforce_sfdx/main/default/objects/Account/recordTypes/HealthCloudGA__IndustriesPayer.recordType-meta.xml
<RecordType>
    <fullName>HealthCloudGA__IndustriesPayer</fullName>
    <active>true</active>
    <description>Represents a Payer</description>
    <label>Payer</label>
</RecordType>