salesforce_sfdx/main/default/objects/Account/recordTypes/InStateFacility.recordType-meta.xml
<RecordType>
    <fullName>InStateFacility</fullName>
    <active>true</active>
    <label>In-State Facility</label>
</RecordType>