salesforce_sfdx/main/default/objects/Account/validationRules/CCI_EmailValueValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>CCI_EmailValueValidation</fullName>
    <active>true</active>
    <description>If Communication Preference is Email, then Email field must be populated</description>
    <errorConditionFormula>AND(ISPICKVAL(Communication_Preference__c ,&apos;Email&apos;), ISBLANK(PersonEmail))</errorConditionFormula>
    <errorDisplayField>PersonEmail</errorDisplayField>
    <errorMessage>Please ensure a valid Email address has been entered.</errorMessage>
</ValidationRule>