salesforce_sfdx/main/default/objects/Account/validationRules/CCI_MobilePhoneValueValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>CCI_MobilePhoneValueValidation</fullName>
    <active>true</active>
    <description>If Communication Preference = SMS, then Mobile Phone must be populated.</description>
    <errorConditionFormula>AND(ISPICKVAL(Communication_Preference__c ,&apos;SMS&apos;), ISBLANK( PersonMobilePhone ))</errorConditionFormula>
    <errorDisplayField>PersonMobilePhone</errorDisplayField>
    <errorMessage>Please ensure a valid phone number has been entered</errorMessage>
</ValidationRule>