salesforce_sfdx/main/default/objects/Account/validationRules/CCI_ValidateFacilityName.validationRule-meta.xml
<ValidationRule>
    <fullName>CCI_ValidateFacilityName</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISCHANGED( Name ),
 RecordType.DeveloperName ='InStateFacility',
 $Profile.Name ='CSR Agent'
)</errorConditionFormula>
    <errorMessage>You don’t have permission to edit the In-State Facility record. Please contact your system administrator.</errorMessage>
</ValidationRule>