salesforce_sfdx/main/default/objects/Account/validationRules/CCI_ValidateProviderName.validationRule-meta.xml
<ValidationRule>
    <fullName>CCI_ValidateProviderName</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 OR(
 ISCHANGED( LastName),
 ISCHANGED( Salutation),
 ISCHANGED( FirstName),
 ISCHANGED( MiddleName),
 ISCHANGED( Suffix )
 ),
 RecordType.DeveloperName ='Provider',
 $Profile.Name ='CSR Agent'
)</errorConditionFormula>
    <errorMessage>You don’t have permission to edit the Provider record. Please contact your system administrator.</errorMessage>
</ValidationRule>