salesforce_sfdx/main/default/objects/Account/validationRules/CCI_ValidPhoneNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>CCI_ValidPhoneNumber</fullName>
    <active>true</active>
    <description>Validates that the Phone number is in (999) 999-9999 format. This works by using the REGEX function to check that the number has ten digits in the (999) 999-9999 format.</description>
    <errorConditionFormula>OR(
	OR(
		AND(
			NOT(ISBLANK(PersonHomePhone)), 
			NOT(REGEX(PersonHomePhone,&quot;^(\\+0?1\\s)?\\(?\\d{3}\\)?[\\s.-]?\\d{3}[\\s.-]?\\d{4}$&quot;))
			), 
		AND(
			NOT(ISBLANK(Work_Phone__c)), 
			NOT(REGEX(Work_Phone__c,&quot;^(\\+0?1\\s)?\\(?\\d{3}\\)?[\\s.-]?\\d{3}[\\s.-]?\\d{4}$&quot;))
			)
		), 
	AND(
		NOT(ISBLANK(PersonMobilePhone)), 
		NOT(REGEX(PersonMobilePhone,&quot;^(\\+0?1\\s)?\\(?\\d{3}\\)?[\\s.-]?\\d{3}[\\s.-]?\\d{4}$&quot;))
		)
	)</errorConditionFormula>
    <errorMessage>US phone numbers should be in this format: (999) 999-9999.</errorMessage>
</ValidationRule>